agregar proveedor de microsoft

--- a/TareasMVC/Views/Usuarios/Registro.cshtml
+++ b/TareasMVC/Views/Usuarios/Registro.cshtml
@@ -27,7 +27,12 @@
 
             <div class="mb-3">
                 <button type="submit" class="btn btn-outline-primary">Registro</button>
-                <a class="btn btn-outline-success" asp-action="Login">Volver Al Login</a>            </div>
+                <a class="btn btn-outline-success" asp-action="Login">Volver Al Login</a>  
+            </div>
+
+            <a class="btn btn-success" asp-action="LoginExterno" asp-route-proveedor="Microsoft">
+                Continuar con Microsoft
+            </a>
 
         </form>
     </div>
