--- a/TareasMVC/Views/Usuarios/Login.cshtml
+++ b/TareasMVC/Views/Usuarios/Login.cshtml
@@ -6,6 +6,13 @@
 
 <h1>Login Usuario</h1>
 
+@if (ViewData.Keys.Contains("mensaje"))
+{
+    <p style="color:red">
+        @ViewData["mensaje"]
+    </p>
+}
+
 <div class="card">
     <div class="card-body">
         <form asp-action="Login">
@@ -32,7 +39,9 @@
                 <button type="submit" class="btn btn-outline-primary">Login</button>
                 <a class="btn btn-outline-success" asp-action="Registro">Crear Nueva Cuenta</a>
             </div>
-
+            <a class="btn btn-success" asp-action="LoginExterno" asp-route-proveedor="Microsoft">
+                Continuar con Microsoft
+            </a>
         </form>
     </div>
 </div>
